Fixed text overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,10 @@ p {
     font-family: 'Oswald', sans-serif;
 }
 
+#contactSlide {
+    height: 115vh;
+}
+
 #contentWrapper {
     max-height: 60vh;
     overflow: hidden;
@@ -43,6 +47,8 @@ p {
 
 #arrow {
     display: none;
+    width: 100px;
+    height: 100px;
     cursor: pointer;
     margin-top: 10px;
 }
@@ -75,8 +81,8 @@ p {
 }
 
 .contact-icon {
-    width: 5vw;
-    height: auto;
+    width: 100px;
+    height: 100px;
 }
 
 @media (max-width: 768px) {
@@ -91,7 +97,7 @@ p {
     }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1450px) {
     body {
         font-size: 2vw;
     }
@@ -105,7 +111,7 @@ p {
         justify-content: space-evenly;
         align-items: flex-start;
         flex-direction: row;
-        width: 80%;
+        width: 90%;
         margin: 0 auto;
     }
 
@@ -115,10 +121,5 @@ p {
         cursor: pointer;
         white-space: nowrap;
         flex: 1;
-    }
-
-    .contact-icon {
-        width: 13vh;
-        height: 13vh;
     }
 }
